--- a/src/main/webapp/scripts/app/companies-entry/companies-entry.html
+++ b/src/main/webapp/scripts/app/companies-entry/companies-entry.html
@@ -14,7 +14,7 @@
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                                 ng-click="clear()">&times;</button>
-                        <h4 class="modal-title" id="myKidLabel" translate="afikomanApp.kid.home.createOrEditLabel">Create or edit a Kid</h4>
+                        <h4 class="modal-title" id="thanksForChoosingMeLabel">תודה שבחרת בי!</h4>
                     </div>
                     <div class="modal-body">
 
@@ -46,9 +46,49 @@
                 </form>
             </div>
         </div>
-    </div>    
+    </div>
 
-    <div class="table-responsive">
+    <div class="modal fade" id="noMoreKidsModal" tabindex="-1" role="dialog" aria-labelledby="myKidLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form name="form" role="form" novalidate
+                      class="ng-scope ng-invalid ng-invalid-required ng-dirty ng-valid-minlength"
+                      ng-submit="submitNoKid()">
+
+                    <div class="modal-header">                        
+                        <h4 class="modal-title" id="noMoreKidsLabel">כל הילדים אומצו! אנא השאר פרטיך ונודיע לך כשיתווספו ילדים. תודה!</h4>
+                    </div>
+                    <div class="modal-body">
+
+                        <div class="form-group">
+                            <label>שם פרטי</label>
+                            <input type="text" class="form-control"
+                                   ng-model="employee.firstName">
+                        </div>
+                        <div class="form-group">
+                            <label>שם משפחה</label>
+                            <input type="text" class="form-control"
+                                   ng-model="employee.lastName">
+                        </div>
+                        <div class="form-group">
+                            <label>דואר אלקטרוני</label>
+                            <input type="text" class="form-control"
+                                   ng-model="employee.email">
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-save"></span>&nbsp;<span translate="entity.action.save">Save</span>
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="table-responsive" ng-show='kids.length > 0'>
         <table class="table table-striped">
             <thead>
                 <tr>                    
