--- a/src/main/webapp/scripts/app/entities/organization/organizations.html
+++ b/src/main/webapp/scripts/app/entities/organization/organizations.html
@@ -19,27 +19,28 @@
                         <h4 class="modal-title" id="myOrganizationLabel" translate="afikomanApp.organization.home.createOrEditLabel">Create or edit a Organization</h4>
                     </div>
                     <div class="modal-body">
-                        <div class="form-group">
+                        <!--<div class="form-group">
                             <label>ID</label>
                             <input type="text" class="form-control" name="id"
                                    ng-model="organization.id" readonly>
-                        </div>
+                        </div>-->
 
                         <div class="form-group">
                             <label translate="afikomanApp.organization.name">Name</label>
                             <input type="text" class="form-control"
                                    ng-model="organization.name">
                         </div>
+                        <!--
                         <div class="form-group">
                             <label translate="afikomanApp.organization.dateAdded">DateAdded</label>
                             <input type="datetime-local" class="form-control"
                                    ng-model="organization.dateAdded" ng-model-options="{timezone: 'UTC'}">
-                        </div>
+                        </div>                        
                         <div class="form-group">
                             <label translate="afikomanApp.organization.password">Password</label>
                             <input type="text" class="form-control"
                                    ng-model="organization.password">
-                        </div>
+                        </div>-->
                         <div class="form-group">
                             <label translate="afikomanApp.organization.pocEmail">PocEmail</label>
                             <input type="text" class="form-control"
@@ -95,7 +96,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <!--<th>ID</th>-->
                     <th translate="afikomanApp.organization.name">Name</th>
                     <th translate="afikomanApp.organization.dateAdded">DateAdded</th>
                     <th translate="afikomanApp.organization.password">Password</th>
