added thanks and success dialogs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
             <div class="well" ui-view="content"></div>
 
             <div class="footer">
-                <span translate="footer">This is your footer </span>&nbsp;<a href="http://biocatch.com" target="_blank" translate="main.github">Github</a>!
+                <span translate="footer">Built with love @ </span>&nbsp;<a href="http://biocatch.com" target="_blank" translate="main.github">BioCatch</a>!
             </div>
         </div>
 
@@ -149,6 +149,7 @@
         <script src="scripts/app/kids-entry/kids-entry.controller.js"></script>
         <script src="scripts/app/companies-entry/companies-entry.js"></script>
         <script src="scripts/app/companies-entry/companies-entry.controller.js"></script>
+        <script src="scripts/app/companies-entry/companies-thanks.controller.js"></script>        
         <script src="scripts/app/entities/companyOrganizationPairing/companyOrganizationPairing.js"></script>
         <script src="scripts/app/entities/companyOrganizationPairing/companyOrganizationPairing.controller.js"></script>
         <script src="scripts/app/entities/companyOrganizationPairing/companyOrganizationPairing-detail.controller.js"></script>
