--- a/src/main/webapp/scripts/app/kids-entry/kids-entry.html
+++ b/src/main/webapp/scripts/app/kids-entry/kids-entry.html
@@ -69,7 +69,27 @@
                 </form>
             </div>
         </div>
-    </div>    
+    </div>
+
+    <div class="modal fade" id="approvalNoticeModal" tabindex="-1" role="dialog" aria-labelledby="myKidLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">בקשתך נרשמה!</h4>
+                </div>
+                <div class="modal-body">
+                    <h3 class="modal-title">תודה על השתתפותך</h3>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">
+                        <span class="glyphicon glyphicon-ok"></span>&nbsp;<span>סגור</span>
+                    </button>                    
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="table-responsive">
         <table class="table table-striped">
