--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -122,6 +122,8 @@
         <script src="scripts/app/error/error.js"></script>
         <script src="scripts/app/main/main.js"></script>
         <script src="scripts/app/main/main.controller.js"></script>
+        <script src="scripts/app/about-us/about-us.js"></script>
+        <script src="scripts/app/about-us/about-us.controller.js"></script>
         <script src="scripts/components/auth/services/sessions.service.js"></script>
         <script src="scripts/components/auth/provider/auth.session.service.js"></script>
         <script src="scripts/app/account/sessions/sessions.js"></script>
