added cover image and additional affiliates

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-md-12">
             <span class="doge img-responsive">
-                <span class="circle circle-medium circle-black">
+                <!--<span class="circle circle-medium circle-black">
                     <h1>ברוכים הבאים למבצע אפיקומן!</h1>
-                </span>
+                </span>-->
             </span>
         </div>
     </div>
@@ -89,6 +89,25 @@
         <div class="col-md-4">
             <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/companies/malam.png') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/organizations/beit-rut.jpg') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
+        </div>
+        <div class="col-md-4">
+            <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/organizations/or-shalom.png') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
+        </div>
+        <div class="col-md-4">
+            <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/organizations/ruach-nashit.jpg') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/organizations/sos-logo.png') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
+        </div>
+        <div class="col-md-4">
+            <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/organizations/yad-beyad.jpg') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
+        </div>        
     </div>
     <br />
     <div class="row">
