--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-2 col-md-offset-1">
+        <div class="col-md-2 col-md-offset-1 hidden-xs">
             <h4>עקבו אחרינו:</h4>
             <div class="row"> <!-- Facebook button -->
                 <a class="circle circle-xsmall circle-black" href="https://www.facebook.com/pages/מבצע-אפיקומן/1525643407709169" style="text-decoration: none">
@@ -29,12 +29,12 @@
                 </button>
             </div>            
         </div>
-        <div class="col-md-4 col-md-offset-1" style="margin-top: 5%;">
+        <div class="col-md-4" style="margin-top: 5%;">
             <button type="button" class="btn circle circle-medium circle-green" ng-click="login('Organization')">
                 <p style="width: 100%;font-size: 50px;">כניסת ילדים</p>
             </button>
         </div>
-        <div class="col-md-4" style="margin-right: -10%;">
+        <div class="col-md-4" style="margin-right: -2%;">
             <button type="button" class="btn btn-default circle circle-medium circle-pink" ng-click="login('Company')">
                 <p style="width: 100%;font-size: 50px;">כניסת חברות</p>
             </button>
