--- a/src/main/webapp/scripts/app/about-us/about-us.html
+++ b/src/main/webapp/scripts/app/about-us/about-us.html
@@ -12,7 +12,7 @@
             <span class="biocatch img-responsive"></span>
         </div>
         <div class="col-md-8">            
-            <p class="lead text-left">
+            <p class="text-left">
                 BioCatch is a leading provider of Cognitive Biometric™, Authentication and Malware Detection solutions for mobile and web applications. Available as a cloud-based solution, BioCatch proactively collects and analyzes more than 400 cognitive parameters to generate a unique user profile. Banks and online & mobile stores use BioCatch to significantly reduce friction associated with risky transactions and protect users against cyber threats, such as Account Takeovers, Man-in-the-Browser (MitB) Malware and Remote Access (RAT) attacks. Additionally, BioCatch provides an enterprise tool that improves the employee authentication experience while protecting access to critical IT assets. The Company was founded in 2011 by experts in neural science research, machine learning and cyber security and is currently deployed in leading banks across North America, Latin America and Europe. 
             </p>            
         </div>
@@ -27,10 +27,32 @@
             <span class="sqream img-responsive"></span>
         </div>
         <div class="col-md-8 col-md-pull-4">
-            <p class="lead text-left">
+            <p class="text-left">
                 SQream Technologies provides organizations with the most rapid, cost-effective, petabyte-scale big data analytics SQL database available on the market today. With SQream, organizations are able to get the answers they are looking for, quickly, and gain significant industry leadership advantage.
                 SQream Technologies introduces the first patent-pending innovative technology that boosts analytics performance through massive parallel computing, using a GPU-based technology  (Graphic Processing Unit). This revolutionary technology delivers up to 100 times faster big data analytics than any other key market player, with scalability capabilities surpassing existing database analytics by orders of magnitude – representing a new era for the Telecom, Genome, Cyber, Finance and IoT industries. 
             </p>            
         </div>        
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <hr style="border-top: 1px dotted black; margin-top: 20px; margin-bottom: 3px">
+        </div>
+    </div>
+    <h1>צור קשר</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <hr style="border-top: 3px solid black; margin-top: 3px; margin-bottom: 3px">
+            <hr style="border-top: 1px solid black; margin-top: 3px; margin-bottom: 3px">
+            <hr style="border-top: 1px dotted black; margin-top: 3px; margin-bottom: 20px">
+        </div>
+    </div>
+    <div class="row" name="clusters">
+        <div class="col-md-12">
+            <p>
+            ניתן ליצור איתנו קשר באחד מאמצעי התקשורת הבאים:<br /><br />
+            דואר אלקטרוני -<br /><a href="mailto:afikoman@biocatch.com?Subject=Hi%20Afikoman!" target="_blank">afikoman@biocatch.com</a><br /><br />
+            סלולרי -<br />054-4330636
+            </p>
+        </div>
     </div>
 </div>
