--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -19,15 +19,15 @@
         <div class="col-md-2 col-md-offset-1 hidden-xs">
             <h4>עקבו אחרינו:</h4>
             <div class="row"> <!-- Facebook button -->
-                <a class="circle circle-xsmall circle-black" href="https://www.facebook.com/pages/מבצע-אפיקומן/1525643407709169" style="text-decoration: none">
+                <a class="circle circle-xsmall circle-black" href="https://www.facebook.com/pages/מבצע-אפיקומן/1525643407709169" target="_blank" style="text-decoration: none">
                     <p style="width: 100%;font-size: 18px;margin: 0">f</p>
                 </a>
             </div>
             <div class="row" style="margin-top: 70%;">
-                <button type="button" class="circle circle-small circle-black" ng-click="login('Organization')">
-                    <p style="width: 100%;font-size: 18px;">צור קשר</p>
+                <button type="button" class="circle circle-small circle-black" ng-click="aboutUs()">
+                    <p style="width: 100%;font-size: 18px;margin-top: 9px;">צור קשר</p>
                 </button>
-            </div>            
+            </div>
         </div>
         <div class="col-md-4" style="margin-top: 5%;">
             <button type="button" class="btn circle circle-medium circle-green" ng-click="login('Organization')">
@@ -64,7 +64,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <h2 style="color: rgb(208, 71, 206);">חברות משתתפות</h2>            
+            <h2 style="color: rgb(208, 71, 206);">חברות משתתפות</h2>
         </div>
     </div>
     <br />
@@ -77,7 +77,7 @@
         </div>
         <div class="col-md-4">
             <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/companies/sapiens-logo.jpg') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
-        </div>        
+        </div>
     </div>
     <div class="row">
         <div class="col-md-4">
@@ -88,6 +88,11 @@
         </div>
         <div class="col-md-4">
             <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/companies/malam.png') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <h2 style="color: rgb(208, 71, 206);">עמותות משתתפות</h2>
         </div>
     </div>
     <div class="row">
@@ -107,7 +112,7 @@
         </div>
         <div class="col-md-4">
             <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/organizations/yad-beyad.jpg') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
-        </div>        
+        </div>
     </div>
     <br />
     <div class="row">
@@ -116,5 +121,5 @@
             <hr style="border-top: 1px solid black; margin-top: 3px; margin-bottom: 3px">
             <hr style="border-top: 1px dotted black; margin-top: 3px; margin-bottom: 20px">
         </div>
-    </div>    
+    </div>
 </div>
