--- a/src/main/webapp/scripts/app/companies-entry/companies-entry.html
+++ b/src/main/webapp/scripts/app/companies-entry/companies-entry.html
@@ -2,14 +2,14 @@
 
     <h2>רשימת ילדים ומתנות</h2>
     <h3>איזה ילד תוכל לשמח לפסח?</h3>
-    
+
     <div class="modal fade" id="saveKidModal" tabindex="-1" role="dialog" aria-labelledby="myKidLabel"
          aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <form name="form" role="form" novalidate
                       class="ng-scope ng-invalid ng-invalid-required ng-dirty ng-valid-minlength"
-                      ng-submit="submit()">
+                      ng-submit="submit()" show-validation>
 
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -20,18 +20,18 @@
 
                         <div class="form-group">
                             <label>שם פרטי</label>
-                            <input type="text" class="form-control"
-                                   ng-model="employee.firstName">
+                            <input type="text" name="first-name" class="form-control" ng-minlength=1 ng-maxlength=50
+                                   ng-model="employee.firstName" ng-required="true">
                         </div>
                         <div class="form-group">
                             <label>שם משפחה</label>
-                            <input type="text" class="form-control"
-                                   ng-model="employee.lastName">
+                            <input type="text" class="form-control" ng-minlength=1 ng-maxlength=50
+                                   ng-model="employee.lastName" ng-required="true">
                         </div>
                         <div class="form-group">
                             <label>דואר אלקטרוני</label>
-                            <input type="text" class="form-control"
-                                   ng-model="employee.email">
+                            <input type="email" name="email" class="form-control"
+                                   ng-model="employee.email" ng-required="true">
                         </div>
 
                     </div>
@@ -52,34 +52,34 @@
          aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form name="form" role="form" novalidate
+                <form name="nmk-form" role="form" novalidate show-validation
                       class="ng-scope ng-invalid ng-invalid-required ng-dirty ng-valid-minlength"
                       ng-submit="submitNoKid()">
 
-                    <div class="modal-header">                        
+                    <div class="modal-header">
                         <h4 class="modal-title" id="noMoreKidsLabel">כל הילדים אומצו! אנא השאר פרטיך ונודיע לך כשיתווספו ילדים. תודה!</h4>
                     </div>
                     <div class="modal-body">
 
                         <div class="form-group">
                             <label>שם פרטי</label>
-                            <input type="text" class="form-control"
-                                   ng-model="employee.firstName">
+                            <input type="text" name="first-name" class="form-control" ng-minlength=1 ng-maxlength=50
+                                   ng-model="employee.firstName" ng-required="true">
                         </div>
                         <div class="form-group">
                             <label>שם משפחה</label>
-                            <input type="text" class="form-control"
-                                   ng-model="employee.lastName">
+                            <input type="text" class="form-control" ng-minlength=1 ng-maxlength=50
+                                   ng-model="employee.lastName" ng-required="true">
                         </div>
                         <div class="form-group">
                             <label>דואר אלקטרוני</label>
-                            <input type="text" class="form-control"
-                                   ng-model="employee.email">
+                            <input type="email" name="email" class="form-control"
+                                   ng-model="employee.email" ng-required="true">
                         </div>
 
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">
+                        <button type="submit" ng-disabled="nmk-form.$invalid" class="btn btn-primary">
                             <span class="glyphicon glyphicon-save"></span>&nbsp;<span translate="entity.action.save">Save</span>
                         </button>
                     </div>
@@ -91,7 +91,7 @@
     <div class="table-responsive" ng-show='kids.length > 0'>
         <table class="table table-striped">
             <thead>
-                <tr>                    
+                <tr>
                     <th translate="afikomanApp.kid.firstName">שם</th>
                     <th>מתנה</th>
                     <th translate="afikomanApp.gift.price">Price</th>
@@ -100,7 +100,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="kid in kids">                    
+                <tr ng-repeat="kid in kids">
                     <td>{{kid.firstName}}</td>
                     <td>{{kid.gift.name}}</td>
                     <td>{{kid.gift.price}}</td>
