--- a/src/main/webapp/scripts/app/companies-entry/companies-entry.html
+++ b/src/main/webapp/scripts/app/companies-entry/companies-entry.html
@@ -1,6 +1,7 @@
 <div>
 
     <h2>רשימת ילדים ומתנות</h2>
+    <p>ניתן לרכוש את המתנות בכל רשתות הצעצועים - רשת אופיס דיפו, רשתות לילן / סבון של פעם</p>
     <h3>איזה ילד תוכל לשמח לפסח?</h3>
 
     <div class="modal fade" id="saveKidModal" tabindex="-1" role="dialog" aria-labelledby="myKidLabel"
