--- a/src/main/webapp/scripts/app/companies-entry/companies-entry.html
+++ b/src/main/webapp/scripts/app/companies-entry/companies-entry.html
@@ -89,6 +89,26 @@
         </div>
     </div>
 
+    <div class="modal fade" id="alreadyAdoptedModal" tabindex="-1" role="dialog" aria-labelledby="myKidLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">הילד כבר אומץ!</h4>
+                </div>
+                <div class="modal-body">
+                    <h3 class="modal-title">בזמן שהתלבטת, מישהו כבר אימץ את הילד... אנא בחר בילד אחר. תודה!</h3>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">
+                        <span class="glyphicon glyphicon-ok"></span>&nbsp;<span>סגור</span>
+                    </button>                    
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="table-responsive" ng-show='kids.length > 0'>
         <table class="table table-striped">
             <thead>
