Changes requested by Nirit

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -19,7 +19,7 @@
         <div class="col-md-2 col-md-offset-1 hidden-xs">
             <h4>עקבו אחרינו:</h4>
             <div class="row"> <!-- Facebook button -->
-                <a class="circle circle-xsmall circle-black" href="https://www.facebook.com/pages/מבצע-אפיקומן/1525643407709169" target="_blank" style="text-decoration: none">
+                <a class="circle circle-xsmall circle-black" href="https://www.facebook.com/%D7%9E%D7%91%D7%A6%D7%A2-%D7%90%D7%A4%D7%99%D7%A7%D7%95%D7%9E%D7%9F-1525643407709169/?ref=aymt_homepage_panel" target="_blank" style="text-decoration: none">
                     <p style="width: 100%;font-size: 18px;margin: 0">f</p>
                 </a>
             </div>
@@ -50,11 +50,17 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <h2>מבצע אפיקומן הינו מיזם חברתי ששם לו למטרה לשמח ילדים בסיכון עם מתנה לקראת חג הפסח.<br />המיזם נולד כרצון שלנו, עובדים בתעשייה הישראלית, לפעול גם בתחומים חברתיים ולאפשר לילדים שחיים בחסר, לקבל מתנת חג שהם חפצים בה.<br />את המיזם התחלנו כשני סטארט-אפים בתחומים שונים, שרצו לעשות מעשה, ומהר מאד גילינו שאנו לא לבד, ושהרצון לתת הוא משותף לחברות רבות בתעשייה הישראלית.<br /><br />אנחנו גאים להיות חלק מהמיזם הזה, וממרקם אנושי שרוצה לתת ולתרום, ומזמינים אתכם להצטרף אלינו.</h2>
+            <p class="lead">מבצע אפיקומן הינו פרויקט ייחודי, ששם לו למטרה לשמח ילדים שידם אינה משגת,
+במתנת חג אישית בפסח.</p>
+<p class="larger">
+אנחנו לא עמותה וזו לא ההתמחות שלנו, אין לנו כל עניין מסחרי או שיווקי אלא רק רצון טוב להטיב את החג עם ילדים בסיכון. "מבצע אפיקומן" החל בחזון אישי של בני רוזנבוים מייסד חברת BioCatch, והפך לפרויקט ייחודי, המגייס עובדים בתעשייה הישראלית לפעול בתחומים חברתיים ולאפשר לילדים שחיים בחסר לקבל מתנת חג.<br />
+ילדים נזקקים אינם זוכים ולבקש ולהתרגש בקבלת מתנות חדשות עבורם. ייחודיות הפרויקט הינה בחיבור האנושי של הצורך לתת ולבקש. "מבצע אפיקומן" עונה על צורך זה ומחבר בין ארגונים לעמותות ובין עובדים לילדים ומאפשר מעורבות אישית הן של התורם והן של הנתרם.<br />
+מבצע אפיקומן מזמין כל אחד מהעובדים, לבחור לקנות מתנה אישית לילד\ה מתוך רשימת מתנות מ 40-120 ₪.</p>
             <br />
-            <h1><strong>רוצה להצטרף אלינו?</strong></h1>
+            <!--<h1><strong>רוצה להצטרף אלינו?</strong></h1>-->
         </div>
     </div>
+    <!--
     <div class="row">
         <div class="col-md-12">
             <hr style="border-top: 3px solid black; margin-top: 3px; margin-bottom: 3px">
@@ -114,6 +120,7 @@
             <span class="img-responsive img-rounded" style="background: url('/assets/images/affiliates/organizations/yad-beyad.jpg') no-repeat center top; background-size: contain; width: 200px; height: 100px; display: inline-block"></span>
         </div>
     </div>
+    -->
     <br />
     <div class="row">
         <div class="col-md-12">
